@@ -1,5 +1,6 @@
 v0.5.1
 Fix: crash when FormPanel has no data_class_name specified.
+New: DataAccessor widgets (Form/GridPanel) now let the underlying model know which widget (i.e. which instance) accesses its data. Can be useful in virtual attributes for generating widget-specific HTML.
 
 v0.5.0
 2009-09-06
